# eos

./: .gitignore  CMakeLists.txt  eosio_build.sh
Docker/: Dockerfile.custom  build.sh
Docker/builder/: build.sh
plugins/: CMakeLists.txt
plugins/faucet_testnet_plugin/: faucet_testnet_plugin.cpp
plugins/kafka_plugin/: CMakeLists.txt  actions.hpp  kafka.cpp  kafka.hpp  kafka_plugin.cpp  types.hpp
plugins/kafka_plugin/include/eosio/kafka_plugin/: kafka_plugin.hpp
plugins/state_plugin/: CMakeLists.txt  state_plugin.cpp
plugins/state_plugin/include/eosio/state_plugin/: state_plugin.hpp
programs/nodeos/: CMakeLists.txt
scripts/: eosio_build_amazon.sh  eosio_build_centos.sh  eosio_build_darwin.sh  eosio_build_darwin_deps  eosio_build_fedora.sh  eosio_build_ubuntu.sh
